# DNN_FLASK

./: DNN.py  README.md  main.py  pyproject.toml  requirements.txt  setup.cfg
flask/: pyvenv.cfg
flask/Scripts/: activate  activate.bat
src/: view.py
src/templates/: index.html
src/tts_models/jsut_sr16000_duration_dnn_acoustic_dnn_sr16k/: duration_model.pth  out_duration_scaler_var.npy
templates/: index.html
tts_models/: main.py
tts_models/jsut_sr16000_duration_dnn_acoustic_dnn_sr16k/: acoustic_model.pth  acoustic_model.yaml  config.yaml  duration_model.yaml  in_acoustic_scaler_mean.npy  in_acoustic_scaler_scale.npy  in_acoustic_scaler_var.npy  in_duration_scaler_mean.npy  in_duration_scaler_scale.npy  in_duration_scaler_var.npy  out_acoustic_scaler_mean.npy  out_acoustic_scaler_scale.npy  out_acoustic_scaler_var.npy  out_duration_scaler_mean.npy  out_duration_scaler_scale.npy
