[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "example_project"
version = "0.1.0"
description = "An example Python project"
authors = [
    { name = "John Doe", email = "john.doe@example.com" }
]
dependencies = [
    "requests>=2.25.1",
    "numpy>=1.21.0"
]
