[metadata]
name = example_project
version = 0.1.0
description = An example Python project
author = Your Name
author_email = your.email@example.com
url = https://github.com/yourusername/yourproject
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.6

[options.packages.find]
where = src

[options.extras_require]
testing =
    pytest
    coverage

[tool:pytest]
addopts = --maxfail=1 --disable-warnings -q
